--- a/ExpressVoituresWebApp/appsettings.json
+++ b/ExpressVoituresWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ExpressVoituresWebApp-abe34e44-738c-4c6e-b191-ae43ba8806b0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=P5ExpressVoitures;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
